--- a/src/renderer/src/assets/base.css
+++ b/src/renderer/src/assets/base.css
@@ -65,3 +65,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.image {
+  height: 400px;
+  width: auto;
+}
