--- a/src/renderer/src/assets/main.css
+++ b/src/renderer/src/assets/main.css
@@ -25,13 +25,13 @@ code {
    font-size: 85%;
 }
 
-#root {
+/* #root {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    margin-bottom: 80px;
-}
+} */
 
 .logo {
    margin-bottom: 20px;
